deployment and some changes on files

--- a/_includes/certificates.html
+++ b/_includes/certificates.html
@@ -1,5 +1,5 @@
 <section class="content">
-    <p>Choise certificate:</p>
+    <p>Choose a certificate:</p>
 
     <ul class="list">
         <li><a href="https://softuni.bg/certificates/details/151346/a8c2197f" target="_blank">Programing Basic
