--- a/assets/styles/pages/about.css
+++ b/assets/styles/pages/about.css
@@ -8,13 +8,16 @@
     /* overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis; */
+    height: 9em; /* Ограничаване на височината до приблизително 5 реда */
+    overflow: hidden;
     position: relative;
 }
 
 .page p.text-hide::after {
     display: block;
     content: '';
-    height: 9em;
+    /* height: 9em; */
+    height: 4em; /* Височина на избледняването */
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -25,4 +28,12 @@
       rgba(1, 22, 39, 0) 0%, rgba(1, 22, 39, 1) 90%
     )
   ;
+}
+
+.page .text-hide.show {
+  height: auto;
+}
+
+.page .text-hide.show::after {
+  display: none;
 }
