--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,20 +22,32 @@
                     <h1>{{page.title}}</h1>
                 </header>
 
-                <div {% if page.title == "About" %}class="text-hide"{% endif %}>
+                <!-- <div {% if page.title=="About" %}class="text-hide" {% endif %}>
                     {{ content }}
+
+
+                    {% if page.title=="About" %}
+                    <button class="show-more">Show More</button>
+                    {% endif %}
+
+                </div> -->
+
+                <div {% unless page.permalink == "/about/" %}class="text-hide" {% endunless %}>
+                    {{ content }}
+
+
+                    {% unless page.permalink != "/about/" %}
+                    <button class="show-more">Show More</button>
+                    {% endunless %}
+
                 </div>
 
-                {% if page.title == "About" %}
-                    <button class="show-more">Show More</button>
-                {% endif %}
-
             </article>
-            
+
         </main>
 
         {% unless page.title == "Ways to get in touch" %}
-            {% include footer.html %}
+        {% include footer.html %}
         {% endunless %}
 
     </div>
