--- a/assets/styles/pages/about.css
+++ b/assets/styles/pages/about.css
@@ -8,7 +8,7 @@
     /* overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis; */
-    height: 9em; /* Ограничаване на височината до приблизително 5 реда */
+    height: 9em; /* Limit height to approximately 5 lines */
     overflow: hidden;
     position: relative;
 }
@@ -17,7 +17,7 @@
     display: block;
     content: '';
     /* height: 9em; */
-    height: 4em; /* Височина на избледняването */
+    height: 4em; /* Fade height */
     width: 100%;
     position: absolute;
     bottom: 0;
