--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,21 @@
 <p class="text-hide">
-    Two years ago, I discovered the vast and fascinating world of programming, and since then, I've been diving into it with enthusiasm and dedication. I thoroughly enjoy learning new technologies and constantly solidifying my knowledge. My current skill set includes working with Node.js, Express, React, Angular, HTML & CSS, Mongoose, TypeScript, and JavaScript.
+    Two years ago, I discovered the vast and fascinating world of programming, and since then, I've been diving into it
+    with enthusiasm and dedication. I thoroughly enjoy learning new technologies and constantly solidifying my
+    knowledge. My current skill set includes working with Node.js, Express, React, Angular, HTML & CSS, Mongoose,
+    TypeScript, and JavaScript.
 
-During my journey, I have worked on various projects, both personal and professional, which have allowed me to develop strong problem-solving skills and a keen eye for detail. I thrive on the challenge of debugging complex issues and take pride in writing clean, efficient, and maintainable code. Collaboration is key in my work ethic, and I enjoy participating in team projects where I can both learn from others and share my insights.
+    During my journey, I have worked on various projects, both personal and professional, which have allowed me to
+    develop strong problem-solving skills and a keen eye for detail. I thrive on the challenge of debugging complex
+    issues and take pride in writing clean, efficient, and maintainable code. Collaboration is key in my work ethic, and
+    I enjoy participating in team projects where I can both learn from others and share my insights.
 
-In addition to mastering specific technologies, I am passionate about following industry trends and best practices. I regularly attend webinars, take online courses, and read technical blogs to keep myself updated with the latest advancements in the field. This continuous learning approach not only enhances my technical skills but also inspires me to experiment with new ideas and innovate.
+    In addition to mastering specific technologies, I am passionate about following industry trends and best practices.
+    I regularly attend webinars, take online courses, and read technical blogs to keep myself updated with the latest
+    advancements in the field. This continuous learning approach not only enhances my technical skills but also inspires
+    me to experiment with new ideas and innovate.
 
-In my free time, I indulge in creating beautiful bouquets and decorations using crepe paper. I also have a passion for preparing healthy meals for my family and exploring the art of culinary photography. Besides, I love engaging in various crafts and applied arts such as knitting and sewing. Additionally, I have a deep appreciation for classical music and opera.
+    In my free time, I indulge in creating beautiful bouquets and decorations using crepe paper. I also have a passion
+    for preparing healthy meals for my family and exploring the art of culinary photography. Besides, I love engaging in
+    various crafts and applied arts such as knitting and sewing. Additionally, I have a deep appreciation for classical
+    music and opera.
 </p>
