--- a/assets/styles/pages/about.css
+++ b/assets/styles/pages/about.css
@@ -37,3 +37,9 @@
 .page .text-hide.show::after {
   display: none;
 }
+
+.show-more {
+  padding: 0.5em;
+  border-radius: 0.3em;
+  background-color: red;
+}
