--- a/assets/styles/pages/about.css
+++ b/assets/styles/pages/about.css
@@ -40,6 +40,8 @@
 
 .show-more {
   padding: 0.5em;
-  border-radius: 0.3em;
-  background-color: red;
+  border-radius: 1em;
+  background-color: #369;
+  color: #fff;
+  opacity: 0.8;
 }
