--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -11,7 +11,7 @@
 
 @import url('site/site-header.css');
 @import url('site/side-aside.css');
-@import url('./site/site-footer.css');
+@import url('site/site-footer.css');
 
 @import url('./elements/buttons.css');
 @import url('./elements/forms.css');
