--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -44,7 +44,7 @@
 
                 </div> -->
 
-                {% unless page.title == "Ways to get in touch" %}
+                <!-- {% unless page.title == "Ways to get in touch" %} -->
                 <div {% if page.permalink == "/about/" %}class="text-hide"{% endif %}>
                     {{ content }}
 
@@ -53,7 +53,7 @@
                     {% endif %}
 
                 </div>
-                {% endunless %}
+                <!-- {% endunless %} -->
 
             </article>
 
