--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -51,7 +51,7 @@
         {% endunless %} -->
 
 
-        {% unless page.permalink == "/contacts/" %}
+        {% unless page.permalink != "/contacts/" %}
         {% include footer.html %}
         {% endunless %}
     </div>
