--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,9 +46,11 @@
 
         </main>
 
-        {% unless page.title == "Ways to get in touch" %}
         {% include footer.html %}
-        {% endunless %}
+
+        <!-- {% unless page.title == "Ways to get in touch" %}
+        {% include footer.html %}
+        {% endunless %} -->
 
     </div>
 
