--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,11 +46,9 @@
 
         </main>
 
+        {% unless page.title == "Ways to get in touch" %}
         {% include footer.html %}
-
-        <!-- {% unless page.title == "Ways to get in touch" %}
-        {% include footer.html %}
-        {% endunless %} -->
+        {% endunless %}
 
     </div>
 
